--- a/sura-portifolio-second/src/components/Banner/banner.css
+++ b/sura-portifolio-second/src/components/Banner/banner.css
@@ -66,6 +66,7 @@
     height: 92%;
     width: 92%;
     background-image: url("../../asset/images/profilephoto.jpg");
+    background-image: url("../../asset/images/photo_2024-08-28_19-21-46.jpg");
     background-size: cover;
     border-radius: 50%;
     background-repeat: no-repeat;
