--- a/sura-portifolio-second/src/components/Banner/Profile/profile.css
+++ b/sura-portifolio-second/src/components/Banner/Profile/profile.css
@@ -4,4 +4,5 @@
     justify-content: space-between;
     min-height: 475px;
     background-image: url("../../../asset/images/bg.jpg");
+    text-align: center;
 }
